<resources>
    <string name="app_name">DormLockApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dorm Lock Opener</string>
    <string name="nav_header_subtitle">Mr AnDong Fly Mom</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="openDoorButtonText">Open</string>
    <string name="settingsButtonText">Settings</string>


    <string name="InputPasswordHint">Input password</string>
    <string name="InputusernameHint">InputUserName</string>
    <string name="inputServerAddressHint">Input ServerAddress</string>
    <string name="saveSettingsButtonText">Save</string>
    <string name="changePasswordButtonText">ChangePassword</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_pasword">Enter Old Pasword</string>
    <string name="enter_username">Enter UserName</string>
    <string name="CP_ExplainText">Not finished yet. This activity allows you to change password to open the door</string>
    <string name="CP_ChangePasswordButtonText">Change</string>
    <string name="compose_shortcut_short_label1">Open</string>
    <string name="title_activity_change_passwrod">ChangePasswrodActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="E_Fail2WriteSP">Error:Fail to write preferences</string>
    <string name="E_Fail2Convert">Error:Fail to convert</string>
    <string name="E_NotAVaildURL">Error:Not a valid server address</string>
    <string name="S_PasswordChangedAndSaved">Password Successfully Changed! Auto changed Saved new Password and User!</string>
    <string name="E_ServerNoResponse">Error:Server Not Responding</string>
    <string name="E_WrongPasswordOrUA">Error:Auth failed! Check your old password!</string>
    <string name="E_Fail2ConvertRequest">Error:Fail to convert request</string>
    <string name="E_PasswordNoMatch">Error:Passwords Doesn\'t Match!</string>
    <string name="E_NeedNetPermission">Need Permission for internet</string>
    <string name="S_DoorShouldOpen">Door (hopefully) will open</string>
    <string name="E_LoginNeeded">Error:NeedToLogin</string>
    <string name="action_help">Help</string>
    <string name="BatteryTextViewDefaultString">Unknown Battery Remaining</string>
    <string name="batteryImgcontentDescription">Image to tell user the remaining battery level</string>
    <string name="E_Fail2GetBatyInfo">Fail to get Battery Info</string>
    <string name="Battery100TextViewStr">Battery is full</string>
    <string name="Battery75TextViewStr">Battery is 75% full</string>
    <string name="Battery50TextViewStr">Battery is half full</string>
    <string name="Battery25TextViewStr">Battery needed to be changed now!</string>
    <string name="Battery00TextViewStr">Battery is fucked</string>
    <string name="menu_admin">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="notAdmin">You are not an admin!</string>
    <string name="error">Error</string>
</resources>