<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:textSize="50sp"
        android:id="@+id/openDoorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openDoorButtonText" />

    <Button
        android:layout_toEndOf="@id/openDoorButton"
        android:layout_marginTop="200dp"
        android:layout_marginStart="25dp"
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsButtonText" />

    <ImageView
        android:id="@+id/batteryImg"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/openDoorButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:srcCompat="@drawable/ic_battery_unknown"
        android:contentDescription="@string/batteryImgcontentDescription" />

    <TextView
        android:id="@+id/BatteryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openDoorButton"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/batteryImg"
        android:text="@string/BatteryTextViewDefaultString" />



</RelativeLayout>